fix https://gitee.com/best_handsome/mybatis-plus-join/issues/I7A3N8